# jc_reversing

./: CMakeLists.txt  README.md  vcpkg.json
extractor/: tiy_extractor.cpp  tiy_extractor.hpp
